--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lumbini Tandoori Bhojanalaya</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">  <!-- Responsive CSS -->
+    <script defer src="js/responsive.js"></script> <!-- Responsive JS -->
     <script defer src="js/script.js"></script>
 </head>
 <body>
