--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -6,6 +6,8 @@
     <title>Checkout - Lumbini Tandoori Bhojanalaya</title>
     <link rel="stylesheet" href="../css/checkout.css">
     <script defer src="../js/checkout.js"></script>
+    <link rel="stylesheet" href="../css/responsive.css">  <!-- Responsive CSS -->
+    <script defer src="../js/responsive.js"></script> <!-- Responsive JS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
