--- a/pages/full-menu.html
+++ b/pages/full-menu.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Full Menu - Lumbini Tandoori Bhojanalaya</title>
     <link rel="stylesheet" href="../css/full-menu.css">
+    <link rel="stylesheet" href="../css/responsive.css">  <!-- Responsive CSS -->
+    <script defer src="../js/responsive.js"></script> <!-- Responsive JS -->
     <script defer src="../js/full-menu.js"></script>
 </head>
 <body>
