--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -6,6 +6,8 @@
     <title>Gallery - Lumbini Tandoori Bhojanalaya</title>
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/gallery.css"> <!-- Separate Gallery CSS -->
+    <link rel="stylesheet" href="../css/responsive.css">  <!-- Responsive CSS -->
+    <script defer src="../js/responsive.js"></script> <!-- Responsive JS -->
     <script defer src="../js/gallery.js"></script> <!-- Separate Gallery JS -->
 </head>
 <body>
@@ -19,7 +21,7 @@
     <nav>
         <ul>
             <li><a href="../index.html">Home</a></li>
-            <li><a href="gallery.html">Gallery</a></li> <!-- Already inside /pages/ -->
+            <li><a href="../pages/gallery.html">Gallery</a></li> <!-- Already inside /pages/ -->
             <li><a href="../index.html#order-reservation">Order Online</a></li>
             <li><a href="../index.html#contact">Contact</a></li>
         </ul>
