--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <!-- Navigation -->
     <nav>
+        <div class="nav-toggle">☰</div>
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#menu">Menu</a></li>
