--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <!-- Navigation -->
     <nav>
-        <button class="nav-toggle">&#9776;</button>
+        <button class="nav-toggle">☰</button>
         <ul>
             <li><a href="#about">About Us</a></li>
             <li><a href="#menu">Menu</a></li>
