--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <!-- Header -->
     <header>
         <img src="images/logo.png" alt="Lumbini Tandoori Logo" class="logo">
-        <h1>Authentic Nepali, Indian and Chinese Cuisine</h1>
-        <p>Kalimati-13, Kathmandu</p>
+        <div>
+            <h1>Authentic Nepali, Indian and Chinese Cuisine</h1>
+            <p>Kalimati-13, Kathmandu</p>
+        </div>
     </header>
 
     <!-- Navigation -->
